adding dataviz info, needs reordering

--- a/notes/share.tex
+++ b/notes/share.tex
@@ -5,14 +5,18 @@
 % anticipar y responder preguntas
 
 \section{\textit{Share} - Compartir}
-Con los resultados del análisis, se preparan \textbf{visualizaciones}, que representarán a los datos de forma gráfica para su presentación, aunque también pueden ser parte del análisis. Cuando la información se encuentra en imágenes, es más fácil de entender. La \textbf{Composición de Datos} consiste en combinar las partes individuales de una visualización, y mostrarlas todas como un conjunto. Hay dos tipos principales de \textit{DataViz}:
+Con los resultados del análisis, se preparan \textbf{\textit{Data Viz} - visualizaciones}, que representarán a los datos de forma gráfica para su presentación, aunque también pueden ser parte del análisis. Cuando la información se encuentra en imágenes, es más fácil de entender. 
+
+La \textbf{\textit{Data Storytelling} - Narrativa de Datos} consiste en la comunicación del significado de un conjunto de datos a través de una narrativa contada con visuales, que se personalizan de acuerdo a la audiencia. La meta es \textbf{involucrar} a la audiencia al capturar y mantener su atención
+
+La \textbf{Composición de Datos} consiste en combinar las partes individuales de una visualización, y mostrarlas todas como un conjunto. Hay dos tipos principales de \textit{Data Viz}:
 \begin{itemize}
     \item {\textbf{Visualización Estática} : no cambian con el tiempo a menos que se editen}
     \item {\textbf{Visualización Dinámica} : son interactivas, cambian con el tiempo}
 \end{itemize}
 Una visual efectiva tiene un \textbf{significado claro}, un uso sofisticado de \textbf{contraste} y una \textbf{ejecución} refinada. Una visualización bien elegida facilita la comprensión de la historia a contar, y dirige la \textbf{atención} a los puntos más importantes : la audiencia debiera reconocer la idea principal en los primeros cinco segundos de verla
 
-Los \textit{DataViz} se vuelven más accesible con el uso de etiquetas, formatos y de texto (para elementos que no son textuales como fotos), y que los datos sean simples y puedan distinguirse unos de otros
+Los \textit{Data Viz} se vuelven más accesible con el uso de etiquetas, formatos y de texto (para elementos que no son textuales como fotos), y que los datos sean simples y puedan distinguirse unos de otros
 
 \paragraph{Design Thinking}
 Proceso utilizado para resolver problemas complejos desde el foco del usuario. Consiste en cinco fases que representan una descripción general, no es necesario que estén en orden
@@ -102,12 +106,13 @@ Conjunto útil de preguntas para criticar lo consumido y qué tan eficaz es
 \subsection{Ejemplos de \textit{DataViz}}
 \begin{itemize}
     \item {\textbf{Gráfico de Barras/Columnas} : contraste de tamaños para comparar dos o más valores. Puede ser horizontal (barras) o vertical (columnas)}
-    \item {\textbf{Gráfico de Líneas} : para cambios o movimientos, donde cada punto representa un dato. \textit{Preferir por sobre barras para cambios pequeños}}
-    \item {\textbf{Gráfico Circular} : cuál es la proporción de una parte en relación al todo}
+    \item {\textbf{Gráfico de Líneas} : para cambios, movimientos o tendencias, donde cada punto representa un dato. \textit{Preferir por sobre barras para cambios pequeños}}
+    \item {\textbf{Gráfico Circular} : cuál es la proporción de una parte en relación al conjunto completo}
+    \item {\textbf{Gráfico de Área} : seguimiento de cambio en valores en múltiples categorías}
     \item {\textbf{Mapas} : organizan los datos en forma periódica}
-    \item {\textbf{Mapa de Calor} : comparación de categorías en un conjunto de datos, como relaciones entre dos variables, utilizando un sistema de color}
+    \item {\textbf{Mapa de Calor} : comparación de categorías en un conjunto de datos, como relaciones entre dos variables, utilizando un sistema de color como una \textit{Paleta de Colores Divergente} : muestra dos rangos de calores utilizando intensidad de colores para mostrar la magnitud del número}
     \item {\textbf{Histograma} : gráfico que muestra la frecuencia en que ciertos valores se encuentran en ciertos rangos}
-    \item {\textbf{Gráfico de Correlación} : muestra las relaciones entre datos. \textit{También llamado Diagrama de Dispersión}}
+    \item {\textbf{Gráfico de Correlación} : muestra las relaciones o tendencias entre datos. \textit{También llamado Diagrama de Dispersión}}
     \item {\textbf{Diagrama de Densidad} : muestra las tendencias en un intervalo o rango}
     \item {Se tienen los siguientes patrones significativos (referir al árbol de decisiones)
     \begin{itemize}
@@ -142,7 +147,7 @@ Conjunto útil de preguntas para criticar lo consumido y qué tan eficaz es
 Recuento estático de datos, entregados de forma periódica a \Gls{stkhldrs}
 
 \subsubsection{\textit{Dashboard} - Panel}
-Monitoreo constante y en vivo de datos entrantes, con una ubicación central que los agrupa. El ingreso de datos es automático \textit{solo si la estructura de datos es la misma}
+Herramienta que organiza la información entrante desde distintas fuentes, en formatos de \textit{Data Viz}, en una ubicación central, . Esto facilita el monitoreo, análisis y visualización simple de los datos. El ingreso es automático \textit{solo si la estructura de datos es la misma}. Los paneles también pueden incluir \textbf{filtros} para mostrar y ocultar información a conveniencia
 \paragraph{Proceso para crear un panel}
     \begin{itemize}
         \item {Identificar a \Gls{stkhldrs} que necesiten ver los datos y cómo los usarán, a través de preguntas efectivas}
