--- a/notes/statistics.tex
+++ b/notes/statistics.tex
@@ -37,4 +37,44 @@ El sesgo es la preferencia, a favor o en contra, subconsciente o no, respecto a 
         \item [\textit{Data Bias}]{ o \textbf{Sesgo de Datos}, consiste en errores que distorsionan sistemáticamente los resultados hacia cierta dirección}
     \end{description}
 
+\subsection{Elementos Básicos para \textit{Data Viz}}
+Estos ejemplos son los tipos más comunes y pueden replicarse a mano o a través de herramientas de \textit{Data Viz}. Dependiendo de la herramienta, pueden haber más tipos disponibles
+\begin{itemize}
+    \item {\textbf{Gráfico de Barras/Columnas} : contraste de tamaños para comparar dos o más valores. Puede ser horizontal (barras) o vertical (columnas)}
+    \item {\textbf{Gráfico de Líneas} : para cambios, movimientos o tendencias, donde cada punto representa un dato. \textit{Preferir por sobre barras para cambios pequeños}}
+    \item {\textbf{Gráfico Circular} : cuál es la proporción de una parte en relación al conjunto completo}
+    \item {\textbf{Gráfico de Área} : seguimiento de cambio en valores en múltiples categorías}
+    \item {\textbf{Mapas} : organizan los datos en forma periódica}
+    \item {\textbf{Mapa de Calor}: comparación de categorías en un conjunto de datos, como relaciones entre dos variables, utilizando un sistema de color como una \textit{paleta de colores divergentes} : muestra dos rangos de calores utilizando intensidad de colores para mostrar la magnitud del número}
+    \item {\textbf{Histograma} : gráfico que muestra la frecuencia en que ciertos valores se encuentran en ciertos rangos}
+    \item {\textbf{Gráfico de Correlación} : muestra las relaciones o tendencias entre datos. \textit{También llamado Diagrama de Dispersión}}
+    \item {\textbf{Diagrama de Densidad}: muestra las tendencias en un inteervalo o rango}
+    \item {Se tienen los siguientes patrones significativos (referir al árbol de decisiones)
+    \begin{description}
+        \item [Cambio]{ : gráfico de línea/barra}
+        \item [Agrupación]{ : gráfico de distribución}
+        \item [Relatividad/Proporciones]{ : gráfico circular}
+        \item [Clasificación]{ : grafico de barras}
+        \item [Correlación]{ : diagrama de dispersión}
+    \end{description}}
+\end{itemize}
+
+% árbol de decisiones : herramienta de toma de decisiones basadas en preguntas clave, para visualizaciones:
+% solo una variable numérica? histograma, diagrama de densidad
+% múltiples sets de datos? gráfico de líneas, gráfico circular
+% cambios en el tiempo? gráfico de barras
+% mostrar relaciones entre datos? diagrama de dispersión, mapa de calor
+
+\paragraph{Evitar gráficos confusos y engañosos}
+\begin{itemize}
+    \item {Cortar el eje y}
+    \item {Uso engañoso de eje y doble}
+    \item {Limitar artificialmente el alcance de los datos}
+    \item {Elecciones problemáticas en cuanto a cómo se combinan o agrupan los datos}
+    \item {Usar elementos visuales de ''parte-todo'' cuando los totales no se suman correctamente}
+    \item {Ocultar tendencias en gráficos acumulativos}
+    \item {Suavizar artificialmente las tendencias}
+    
+\end{itemize}
+
 \newpage
