dataviz needs reordering

--- a/notes/destrezas.tex
+++ b/notes/destrezas.tex
@@ -55,7 +55,7 @@ Identificar y definir un problema, para luego resolverlo usando datos de forma o
 \end{table}
 
 \subsection{Comunicación Clara y Efectiva}
-Mantención de buenas relaciones con colegas, \gls{stkhldrs} y miembros del equipo a través de buenas prácticas de diálogo. \textit{Es importante tomar en cuenta \textbf{quién} es la audiencia, \textbf{qué saben} previamente y \textbf{qué necesitan} saber}
+Al mantener el diálogo con colegas, \gls{stkhldrs} y miembros del equipo, se preservan las buenas relaciones. \textit{Es importante tomar en cuenta \textbf{quién} es la audiencia, \textbf{qué saben} previamente y \textbf{qué necesitan} saber}
 
 \subsubsection{Identificar antes de Comunicar}
 \begin{itemize}
