--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -179,7 +179,7 @@
 \newglossaryentry{probemp}{
     name = Problema Empresarial,
     sort = {problema},
-    description = {Resultado u objetivos que la empresa busca alcanzar, que considera exitoso. \textit{También llamado Desafío/Objetivo Empresarial, Estrategia de Negocios}}
+    description = {Resultado u objetivos que la empresa busca alcanzar, que considera exitoso. Es la pregunta o problema a solucionar a través del análisis. \textit{También llamado Desafío/Objetivo Empresarial, Estrategia de Negocios}}
 }
 
 \newglossaryentry{habbland}{
