--- a/notes/prepare.tex
+++ b/notes/prepare.tex
@@ -43,27 +43,27 @@ Extendiendo el concepto de \gls{ethcs}, la \textbf{ética de los datos} consiste
         \item {Derecho legal al acceso de los datos}
     \end{itemize}}
     \item {\textbf{\textit{Openness} - Apertura} : Los datos procesados debieran ser de libre acceso, uso y distribución. Los estándares de \textbf{\textit{Open Data}} son
-    \begin{itemize}
-        \item {\textbf{Disponibilidad y Acceso}}
-        \item {\textbf{Reutilización y Redistribución}}
-        \item {\textbf{Participación Universal}}
-        \item {\textbf{Interoperabilidad} : capacidad de conectar sistemas y servicios para la conexión y distribución abierta de datos}
-    \end{itemize}}
+    \begin{description}
+        \item [Disponibilidad y Acceso]
+        \item [Reutilización y Redistribución]
+        \item [Participación Universal]
+        \item [Interoperatibilidad]{ : capacidad de conectar sistemas y servicios para la conexión y distribución abierta de datos}
+    \end{description}}
 \end{itemize}
 
 \subsubsection{Anonimización de Datos}
 Protección de los \textbf{datos privados o confidenciales} de las personas. \textit{Ej : patentes de autos, direcciones IP, registros médicos, cuentas bancarias, número de seguro social}
-\begin{itemize}
-    \item {\textbf{\textit{PII} - Información de Identificación Personal} : Información que puede usarse por si misma o junto a otros datos, para rastrear la identidad de una persona}
-    \item {\textbf{Desidentificación} : proceso para eliminar toda la información de identificación personal. \textit{Ejemplo : dejar espacios en blanco, ejecutar comando hash, enmascarar con códigos de longitud fija, ocultar utilizando valores alterados}}
-\end{itemize}
+\begin{description}
+    \item [\textit{PII} - Información de Identificación Personal]{ : Información que puede usarse por si misma o junto a otros datos, para rastrear la identidad de una persona}
+    \item [Desidentificación]{ : proceso para eliminar toda la información de identificación personal. \textit{Ejemplo : dejar espacios en blanco, ejecutar comando hash, enmascarar con códigos de longitud fija, ocultar utilizando valores alterados}}
+\end{description}
 
 \subsection{Seguridad de los Datos}
 Protección de los datos ante posibles accesos no autorizados, o corrupción de distintos grados. Algunas herramientas como hojas de cálculo tienen medidas de seguridad incorporadas, como permisos de edición, visualización o control. Pero otras medidas generales consisten en
-\begin{itemize}
-    \item {\textbf{Cifrado} : Un algoritmo único altera los datos y funciona como clave para que otros individuos o sistemas puedan usarlos}
-    \item {\textbf{Tokenización} : Reemplazo de los datos con otros generados aleatoriamente. Para acceder a los datos originales y completos, el usuario o aplicación debe tener permiso para utilizar los datos tokenizados, junto con la asignación del token. Si estos datos tokenizados se piratean, los originales estarán seguros en otra ubicación}
-\end{itemize}
+\begin{description}
+    \item [Cifrado]{ : Un algoritmo único altera los datos y funciona como clave para que otros individuos o sistemas puedan usarlos}
+    \item [Tokenización]{ : Reemplazo de los datos con otros generados aleatoriamente. Para acceder a los datos originales y completos, el usuario o aplicación debe tener permiso para utilizar los datos tokenizados, junto con la asignación del token. Si estos datos tokenizados se piratean, los originales estarán seguros en otra ubicación}
+\end{description}
 
 
 
