--- a/notes/share.tex
+++ b/notes/share.tex
@@ -7,8 +7,18 @@
 \section{\textit{Share} - Compartir}
 Con los resultados del análisis, se preparan \textbf{\textit{Data Viz} - visualizaciones}, que representarán a los datos de forma gráfica para su presentación, aunque también pueden ser parte del análisis. Cuando la información se encuentra en imágenes, es más fácil de entender. 
 
-La \textbf{\textit{Data Storytelling} - Narrativa de Datos} consiste en la comunicación del significado de un conjunto de datos a través de una narrativa contada con visuales, que se personalizan de acuerdo a la audiencia. La meta es \textbf{involucrar} a la audiencia al capturar y mantener su atención
+La \textbf{\textit{Data Storytelling} - Narrativa de Datos} consiste en la comunicación del significado de un conjunto de datos a través de una narrativa contada con visuales, que se personalizan de acuerdo a la audiencia. La meta es \textbf{involucrar} a la audiencia al capturar y mantener su atención, por lo que hay que considerar quién es la audiencia y lo que necesitan saber. Para crear esta narrativa de forma eficiente, se necesita
+\begin{itemize}
+    \item {\textbf{Personajes} : personas afectadas}
+    \item {\textbf{Configuración} : qué es lo que ocurre, qué tan seguido, qué tareas. \textit{Antecedentes previos}}
+    \item {\textbf{Conflicto o Tema Principal} : punto de tensión}
+    \item {\textbf{Revelación} : resolución del problema}
+    \item {\textbf{Momento a-ha!} : compartir recomendaciones}
+\end{itemize}
+Un \textit{framework} estrátegico de presentación parte por entender el \gls{probemp}. Luego se establece la \textbf{hipótesis} : la idea a probar a través de los datos. Mientras antes se establezca la hipótesis, mejor es el entendimiento
 
+
+% nta : incluir en alguna parte : paste != link != embed
 La \textbf{Composición de Datos} consiste en combinar las partes individuales de una visualización, y mostrarlas todas como un conjunto. Para distinguir entre datos \textbf{activos} y \textbf{estáticos}, se considera su antigüedad, cuánto falta para que sean obsoletos o inválidos, y si necesitan actualización para considerarse válidos. Hay dos tipos principales de \textit{Data Viz}:
 \begin{itemize}
     \item {\textbf{Visualización Estática} : no cambian con el tiempo a menos que se editen. \textit{ej : screenshots o capturas en presentaciones y paneles}
@@ -104,6 +114,14 @@ Además de elegir el elemento visual correcto, se debe optimizar la proporción 
     \item {\textbf{Historia} : concepto, que junto a los datos generan el esquema de lo que se muestra}
     \item {\textbf{Meta} : función de los datos, usabilidad y utilidad}
     \item {\textbf{Forma Visual} : metáfora, lo bello y la estructura}
+\end{itemize}
+Aplicar este método en \textit{Data Viz} consiste en
+\begin{itemize}
+    \item {Presentar gráficos por su nombre}
+    \item {Responder preguntas obvias antes que sean preguntadas}
+    \item {Establecer la percepción del gráfico}
+    \item {Mostrar los datos que apoyan esa percepción}
+    \item {Mencionar la importancia de los datos a la audiencia : presentar el posible impacto de la solución para la empresa, junto a las acciones que los \gls{stkhldrs} podrían tomar}
 \end{itemize}
 
 \paragraph{Verificación con Trifecta de Kaiser Fung (Junk Charts)}
