design should be apart of dataviz

--- a/notes/ask.tex
+++ b/notes/ask.tex
@@ -1,5 +1,5 @@
 \section{\textit{Ask} - Preguntar}
-Se establece un \gls{probemp}. Es necesario comprender las expectativas de los \gls{stkhldrs}, junto a sus desafíos o preconcepciones anteriores. Algunas técnicas o métodos a aplicar incluyen
+Una vez se conocen las expectativas, desafíos y preconcepciones anteriores de los \gls{stkhldrs}, se establece un \gls{probemp}. Algunas técnicas a aplicar incluyen
 \begin{itemize}
     \item {\gls{strctrdthnkng}}
     \item {\gls{5w}, para determinar la causa principal de un problema}
@@ -9,7 +9,7 @@ Se establece un \gls{probemp}. Es necesario comprender las expectativas de los \
 \subsection{Tipos de Objetivos}
 \begin{description}
     \item [Realizar Predicciones]{ : Decisiones informadas para visualizar las cosas a futuro}
-    \item [Categorizar Cosas]{ : Asignar información a dos grupos de datos distintos con cualidades comunes}
+    \item [Categorizar Cosas]{ : Asignar información a dos grupos distintos con cualidades comunes}
     \item [Encontrar Algo Inusual]{ : Identificar datos que se salen de la norma}
     \item [Identificar Temas]{ : Agrupar información categorizada en conceptos más amplios}
     \item [Descubrir Conexiones]{ : Encontrar desafíos similares encontrados por otros, para combinar datos y conclusiones}
