presentations should be on skills

--- a/notes/destrezas.tex
+++ b/notes/destrezas.tex
@@ -1,4 +1,8 @@
+% nta : si bien presentaciones debieran ir en share, se entiende mejor en el contexto de habilidades del analista
+% la idea es recolectar destrezas o habilidades blandas de otras secciones
+
 \section{Destrezas del Analista de Datos}
+El analista de datos tiene dos funciones principales : analizar los datos en si, y presentar los resultados de forma efectiva
 
 \subsection{Habilidades Analíticas}
 Cualidades y características asociadas con la resolución de problemas usando hechos
@@ -25,6 +29,39 @@ Identificar y definir un problema, para luego resolverlo usando datos de forma o
 \end{description}
 
 \subsection{Reuniones y Presentaciones}
+Los aspectos más importantes de las presentaciones son : definir el propósito, mantener la presentación concisa, mantener algún tipo de flujo lógico, que sea atractivo visualmente, y que sea fácil de entender. Las habilidades de presentación se practican en cada una
+\begin{itemize}
+    \item {Controlar la emoción y los nervios}
+    \item {Comenzar con las ideas generales}
+    \item {Utilizar la regla de los cinco segundos}
+    \item {La preparación es clave}
+    \item {Se recomienda el siguiente orden de diapositivas : agenda o estructura, propósito, datos o análisis, propuesta, llamada a acción}
+    \item {Tener en cuenta que la audiencia : no siempre verá los pasos tomados para llegar a la conclusión, tienen la mente ocupada, se distrae fácilmente}
+\end{itemize}
+
+\paragraph{Consejos y trucos para presentar datos y resultados}
+\begin{itemize}
+    \item {Conocer la mejor forma de organizarse. audiencia? propósito?}
+    \item {Preparar puntos de conversación, limitar texto en diapositivas}
+    \item {Finalizar con recomendaciones}
+    \item {Dejar tiempo para preguntas y presentar los datos}
+    \item {Pedir opiniones al cierre}
+\end{itemize}
+
+\paragraph{Cómo hablar}
+\begin{itemize}
+    \item {Mantener las oraciones cortas}
+    \item {Generar instancias para pausas intencionales}
+    \item {Mantener un tono de voz uniforme}
+\end{itemize}
+
+\paragraph{Limitar Hábitos Nerviosos}
+\begin{itemize}
+    \item {Mantenerse quieto, moverse con propósito}
+    \item {Practicar buena postura}
+    \item {Hacer contacto visual positivo}
+\end{itemize}
+
 \begin{table}
     \centering
     \begin{tabular}{|p{4.8cm}|p{4.8cm}|p{4.7cm}}
