share done + all doc needs reediting, next chapter should be R

--- a/notes/destrezas.tex
+++ b/notes/destrezas.tex
@@ -62,6 +62,74 @@ Los aspectos más importantes de las presentaciones son : definir el propósito,
     \item {Hacer contacto visual positivo}
 \end{itemize}
 
+\paragraph{Anticiparse a Preguntas}
+\begin{itemize}
+    \item {Entender las expectativas de los \gls{stkhldrs}}
+    \item {Asegurarse de entender el objetivo, y lo que los \gls{stkhldrs} desean}
+    \item {Si no se entiende, las preguntas no se responderán correctamente}
+    \item {Realizar la \textbf{Prueba del colega} : ensayo de presentación junto a alguien que no sepa del tema, para ver qué preguntas, conclusiones y comentarios pueda generar}
+    \item {Empezar sin preconcepciones : no hay que asumir que la audiencia conoce la terminología, acrónimos, eventos o información previa y necesaria}
+    \item {Trabajar con el equipo para preparar un borrador con respuestas a preguntas anticipadas}
+\end{itemize}
+
+\paragraph{Considerar las Limitaciones de los Datos}
+\begin{itemize}
+    \item {Análisis crítico de las correlaciones}
+    \item {Observar el \gls{cntxt}}
+    \item {Comprender las fortalezas y debilidades de las herramientas}
+\end{itemize}
+
+\paragraph{Lista de Verificación para preparar Q+A}
+\textbf{Antes de la presentación}
+\begin{itemize}
+    \item {Armar y preparar preguntas}
+    \item {Conversar sobre presentaciones con colegas, gerente..., y pedir que comenten preguntas que puedan tener}
+    \item {Pedir comentarios y opiniones sobre la presentación o documento de análisis}
+    \item {Pensar en preguntas complejas o partes poco claras}
+    \item {Practicar la presentación por seguridad, por si falta algo}
+\end{itemize}
+\textbf{Durante la presentación}
+\begin{itemize}
+    \item {Prepararse para preguntas}
+    \item {Abordar cualquier tema que surja}
+    \item {Evitar que una sola persona desvíe la presentación}
+    \item {Presentar un apéndice con visualizaciones y contenido extra. \textit{apéndice : información que no está presente en la presentación en si, pero que puede ser útil al tenerla al alcance}}
+\end{itemize}
+
+\paragraph{Tipos de Objeciones}
+\textbf{Acerca de los datos}
+\begin{itemize}
+    \item {Dónde se obtuvieron?}
+    \item {De qué sistema vienen?}
+    \item {Qué transformaciones se le hicieron?}
+    \item {Qué tan reciente o precisos son?}
+\end{itemize}
+\textbf{Acerca del Análisis}
+\begin{itemize}
+    \item {Se puede replicar?}
+    \item {Quién entregó sus opiniones al respecto?}
+\end{itemize}
+\textbf{Acerca de los Resultados}
+\begin{itemize}
+    \item {Estos resultados existen para otros periodos de tiempo?}
+    \item {Se controlaron las diferencias en los datos?}
+\end{itemize}
+
+\paragraph{Respuestas para posibles objeciones}
+\begin{itemize}
+    \item {Comunicar cualquier suposición}
+    \item {Explicar por qué el análisis puede diferir de las expectativas}
+    \item {Reconocer la validez de la objeción y tomar acción para seguir investigando}
+\end{itemize}
+
+\paragraph{Otras prácticas recomendadas}
+\begin{itemize}
+    \item {Escuchar la pregunta completa, repetirla de ser necesario}
+    \item {Entender el contexto de la pregunta}
+    \item {Involucrar a toda la audiencia, incluir a otras voces}
+    \item {Mantener respuestas cortas y precisas}
+\end{itemize}
+
 \begin{table}
     \centering
     \begin{tabular}{|p{4.8cm}|p{4.8cm}|p{4.7cm}}
