--- a/notes/spreadsheet.tex
+++ b/notes/spreadsheet.tex
@@ -93,5 +93,7 @@ Para ciertas funciones, es posible añadir el sufijo IF para tomar ciertos argum
     \end{description}}
 \end{description}
 
+\newpage
+
 
 
